chore: set uncaughtExceptionHandlers across threads
As a backup to whether errors are handled in runnables, ensure things are logged at ERROR level. In some cases the error is really fatal. Gulp.